# ytmusic-api-server

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  README.md  api.py  index.js  package-lock.json  package.json  pyproject.toml  requirements.txt  util.js
.github/workflows/: publish.yml
providers/: index.js
providers/spotify/: index.js
providers/ytmusic/: index.js
whatis-core/: package-lock.json  package.json
whatis-core/lib/: info-extras.js  utils.js
